--- a/1_2_4.html
+++ b/1_2_4.html
@@ -23,7 +23,7 @@
 	  
   	<div class="container" id="conceptual">
         <h4>Conceptual maps</h4>
-		<p>Two different conceptual maps have been done: the first illustrates the primary approach that brought us to the definition of the topic that would have been protagonist; the second shows the classification of the topic in the museological approach.</p>
+		<p>Two different conceptual maps have been done: the first illustrates the primary approach that brought us to the definition of the topic that would have been protagonist; the second shows the context and the cognitive focus.</p>
 		      <div class="two-grid">
                 <div class="left">
                   <h6>CH topic</h6>
@@ -35,11 +35,11 @@
 		    </div>
                 
                 <div class="right">
-                  <h6>Museological approach</h6>
+                  <h6>CH context and cognitive focus</h6>
                   <p>
                     <img src="assets/img/concep.png" style="border-radius: 0">
                    <div class="portfolio-links">
-			<a href="assets/img/concep.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Museological approach - conceptual map"><i class="bx bx-plus"></i></a>
+			<a href="assets/img/concep.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="CH context and cognitive focus - conceptual map"><i class="bx bx-plus"></i></a>
 			</div>
 			    </div>
               </div>
