--- a/PWDB.html
+++ b/PWDB.html
@@ -162,7 +162,9 @@
 
 <nav id="exhibit-pages" class="side">
     <ul><li class="current"><a href="PWDB.html">Introduction</a>
-		<ul><li><a href="#" onclick="change_page('1_1_1.html')">The context</a>
+		<ul>
+		   <li><a href="Wanted_DesignBrief.pdf">Complete Project Design Brief pdf version</a>
+		   <li><a href="#" onclick="change_page('1_1_1.html')">The context</a>
 			<ul><li><a href="#" onclick="change_page('1_1_1.html')">Reference institutions</a></li>
 			<li><a href="#" onclick="change_page('1_1_2.html')">Relevant assets</a></li>
 			<li><a href="#" onclick="change_page('1_1_3.html')">The target audience</a></li>
