--- a/PWDB.html
+++ b/PWDB.html
@@ -162,7 +162,7 @@
 
 <nav id="exhibit-pages" class="side">
     <ul>
-	    <li><a href="Wanted_DesignBrief.pdf">Complete Project Design Brief pdf version</a></li>
+	    <li><a href="Wanted_DesignBrief.pdf">Complete Design Brief - pdf version</a></li>
 	    <li class="current"><a href="PWDB.html">Introduction</a>
 		<ul>
 		   
